--- a/index.html
+++ b/index.html
@@ -24,13 +24,23 @@
               <a href="#">Home</a>
             </li>
             <li>
-              <a href="#"
-                >Our Service <i class="fas fa-chevron-down fa-2xs chevron"></i
-              ></a>
+              <div class="our-services">
+                <p>
+                  Our Services
+                  <i class="fas fa-chevron-down fa-xs chevron"></i>
+                </p>
+                <div class="our-services-contents">
+                  <a href="/machine_insp.html">Machine Part Inspection</a>
+                  <a href="#">3D Printing</a>
+                  <a href="#">CAD Designs & Modeling</a>
+                  <a href="#">Engineering Drawing</a>
+                  <a href="#"> Data Entry</a>
+                </div>
+              </div>
             </li>
             <li>
               <a href="#"
-                >Products <i class="fas fa-chevron-down fa-2xs chevron"></i
+                >Products <i class="fas fa-chevron-down fa-xs chevron"></i
               ></a>
             </li>
             <li>
@@ -304,13 +314,13 @@
     <footer>
       <p>&copy; Copyright 2024 Datasphere Systems. All Rights Reserved</p>
     </footer>
+
+    <script
+      src="https://kit.fontawesome.com/fb4f9d5439.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <script src="main.js"></script>
   </body>
-
-  <script
-    src="https://kit.fontawesome.com/fb4f9d5439.js"
-    crossorigin="anonymous"
-  ></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-  <script src="main.js"></script>
 </html>
