--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <i class="fas fa-chevron-down fa-xs chevron"></i>
                 </p>
                 <div class="our-services-contents">
-                  <a href="/machine_insp.html">Machine Part Inspection</a>
+                  <a href="machine_insp.html">Machine Part Inspection</a>
                   <a href="#">3D Printing</a>
                   <a href="#">CAD Designs & Modeling</a>
                   <a href="#">Engineering Drawing</a>
