font changed, header fixed position to top, skype icon changed to whatsapp icon, slider speed and style changed

--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
 
         <div class="socials">
           <div class="linkedin"><i class="fab fa-linkedin-in"></i></div>
-          <div class="skype"><i class="fab fa-skype"></i></div>
+          <div class="whatsapp"><i class="fab fa-whatsapp"></i></div>
           <div class="facebook"><i class="fab fa-facebook-f"></i></div>
           <div class="twitter"><i class="fab fa-x-twitter"></i></div>
           <div class="instagram"><i class="fab fa-instagram"></i></div>
         </div>
       </header>
+
+      <div id="offset-header"></div>
 
       <!-- Swiper -->
       <div class="swiper mySwiper">
@@ -218,7 +220,7 @@
 
         <div class="cad">
           <div id="services-header">
-            <h2>CAD Designs & Modeling</h2>
+            <h2>CAD Modeling</h2>
             <div class="dropdown">
               <i class="fas fa-chevron-down fa-lg"></i>
             </div>
@@ -235,7 +237,7 @@
 
         <div class="eng-draw">
           <div id="services-header">
-            <h2>Engineering Drawing</h2>
+            <h2>Engineering Drafts & Drawings</h2>
             <div class="dropdown">
               <i class="fas fa-chevron-down fa-lg"></i>
             </div>
