--- a/machine_insp.html
+++ b/machine_insp.html
@@ -53,12 +53,14 @@
 
         <div class="socials">
           <div class="linkedin"><i class="fab fa-linkedin-in"></i></div>
-          <div class="skype"><i class="fab fa-skype"></i></div>
+          <div class="whatsapp"><i class="fab fa-whatsapp"></i></div>
           <div class="facebook"><i class="fab fa-facebook-f"></i></div>
           <div class="twitter"><i class="fab fa-x-twitter"></i></div>
           <div class="instagram"><i class="fab fa-instagram"></i></div>
         </div>
       </header>
+
+      <div id="offset-header"></div>
 
       <!-- <div class="nav-steps"></div> -->
 
